chore[.env]: GoogleMap API Key

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <div id="portal"></div>
     <div id="root"></div>
     <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_CvZu-cDZIOJL05KK8PxDg6zl37fl2z8&v=weekly"
+    src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_API_KEY%&v=weekly"
     defer
   ></script>
   </body>
