style: add favicon, useless file deleted

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,9 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Where I've been ?</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="backdrop-hook"></div>
     <div id="modal-hook"></div>
     <div id="portal"></div>
